Fixes post cards scrollbar

--- a/resources/styles/blocks/_search-modal.scss
+++ b/resources/styles/blocks/_search-modal.scss
@@ -63,6 +63,8 @@
   font-size: 16px;
   padding-bottom: 4px;
   border-bottom: 1px solid $base-gray;
+  border-radius: 0;
+  background-color: transparent;
 
   &::placeholder {
     color: $base-gray;
